--- a/public/utils/css/imperius-main.css
+++ b/public/utils/css/imperius-main.css
@@ -43,3 +43,10 @@ body {
 .no-margin {
   margin-bottom: 0 !important;
 }
+
+.word-wrap {
+  white-space: pre-wrap;      /* CSS3 */
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -o-pre-wrap;   /* Opera 7 */
+  word-wrap: break-word;      /* IE */
+}
